# limux

./: .gitignore  .gitmodules  Cargo.toml  PKGBUILD-source.template  PKGBUILD.template  README.md
.cargo/: config.toml
.github/workflows/: aur-publish.yml  rust-quality.yml
linux/rust/cmux-ghostty-sys/src/: lib.rs
linux/rust/cmux-host-linux/src/: main.rs  pane.rs  terminal.rs  window.rs
linux/scripts/: package.sh
rust/cmux-cli/: Cargo.toml
rust/cmux-cli/src/: main.rs
rust/cmux-control/: Cargo.toml
rust/cmux-control/src/: ffi.rs  lib.rs  server.rs  socket_path.rs
rust/cmux-control/tests/: socket_roundtrip.rs
rust/cmux-core/: Cargo.toml
rust/cmux-ghostty-sys/: Cargo.toml
rust/cmux-host-linux/: Cargo.toml  limux.desktop
rust/cmux-host-linux/src/: lib.rs  pane.rs  terminal.rs  window.rs
rust/cmux-protocol/: Cargo.toml
rust/limux-host-linux/src/: app_config.rs  keybind_editor.rs  main.rs  pane.rs  terminal.rs  window.rs
scripts/: package.sh
