[package]
name = "cmux-host-linux"
version = "0.1.0"
edition = "2021"
authors = ["cmux contributors"]
license = "MIT"

[[bin]]
name = "cmux-linux"
path = "src/main.rs"

[features]
default = ["webkit"]
webkit = ["dep:webkit6"]

[dependencies]
gtk4 = { version = "0.11", features = ["v4_10"] }
libadwaita = "0.9"
uuid = { version = "1", features = ["v4"] }
webkit6 = { version = "0.6", optional = true }
cmux-ghostty-sys = { path = "../cmux-ghostty-sys" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
